Fixed the data-tooltip z-index issues.

--- a/assets/stylesheets/shipyard/components/_tooltips.sass
+++ b/assets/stylesheets/shipyard/components/_tooltips.sass
@@ -124,15 +124,21 @@
     background-color: #fff
     +box-shadow
 
-  // Data Tooltip
+  // Data-Tooltip
   &-data
     +extend('parent')
+
+    // Data-Tooltip: Arrow
     &::before
+      @extend .z-60 !optional
       opacity: 0
       visibility: hidden
       transition: opacity 300ms ease 300ms, transform 300ms ease 300ms, visibility 0ms ease 300ms
+
+    // Data-Tooltip: Content
     &::after
       +extend
+      @extend .z-50 !optional
       width: auto
       min-width: 0
       max-width: none
@@ -151,7 +157,7 @@
       &::before
         +extend('light')
 
-    // Data Tooltip: Directions
+    // Data-Tooltip: Directions
     @each $direction in (top, bottom, left, right)
       &-#{$direction}
         &::before
